# bullet-dodge-rl

./: .gitignore  LICENSE  README.md  cnn.py  play.py  predict.py  pyproject.toml  requirements.txt  train.py
bullet_dodge_env/: __init__.py  callbacks.py  env.py  utils.py
logs/example/: events.out.tfevents.1773108010.DESKTOP-GDJSCI0.28744.0  events.out.tfevents.1773239875.DESKTOP-GDJSCI0.21628.0
