[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bullet-dodge-rl"
version = "0.1.0"
description = "A standalone pygame and gymnasium dodge simulator for reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pygame>=2.5",
    "stable-baselines3>=2.3",
    "torch>=2.0",
]

[tool.setuptools]
packages = ["bullet_dodge_env"]
